--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,12 +14,12 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <div class="logo">Logo</div>
+        <div class="logo">CovidBlogs</div>
         <div class="navbar-links">
           <ul>
             <li><a href="home">Home</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="register">SignUp</a></li>
+            <li><a href="register">Register</a></li>
             <li><a href="login">Login</a></li>
           </ul>
         </div>
