--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/main.css" />
-    <title>Document</title>
+    <title>Register</title>
   </head>
   <body>
-    <h1>register page</h1>
+    <div class="login-container">
+      <div class="login-main">
+        <h1>REGISTER</h1>
+        <form action="/register" method="POST">
+          <input type="username" name="username" placeholder="username" />
+          <input type="email" name="email" placeholder="email@gmail.com" />
+          <input type="password" name="password" placeholder="* * * * *" />
+          <button>REGISTER</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
