--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/main.css" />
-    <title>Document</title>
+    <title>Login</title>
   </head>
   <body>
     <div class="login-container">
       <div class="login-main">
-        <h1>SIGN IN TO YOUR ACCOUNT</h1>
+        <h1>SIGN IN</h1>
         <form action="/login" method="POST">
           <input type="email" name="email" placeholder="example@gmail.com" />
           <input type="password" name="password" placeholder="* * * * *" />
