small adjustments and started on dashboard

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,89 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Covid News Generator</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
     <link rel="stylesheet" href="/main.css" />
+    <title>Covid News Generator</title>
   </head>
   <body>
-    <div class="home-upper">
-      <div class="home-upper-container">
-        <div class="home-title">
+    <div class="home-wrapper">
+      <div class="home-container">
+        <div class="home-text">
           <h1>
-            Stay At Home, Keep <br />
-            You & Your Family <br />
-            Safe
+            Be apart of the <br />
+            community by sharing <br />
+            your experiences
           </h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing <br />
+            elit. Excepturi accusamus
+          </p>
+          <a href="register">Sign Up Free</a>
         </div>
-        <div class="home-btn">
-          <button>How to Protect</button>
+        <div class="image">
+          <img src="images/home_image.png" alt="" />
         </div>
-      </div>
-      <div class="home-image">
-        <img src="../images/home-image.png" alt="" />
       </div>
     </div>
-
-    <section>
-      <h1>news</h1>
-      <div class="container">
-        <div class="cards-section">
-          <div class="card">
-            <div class="card-header">Covid Info</div>
-            <div class="card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatem voluptatibus harum quaerat, vero, culpa quasi
-                recusandae repudiandae maxime tempore impedit corrupti saepe
-                dicta, at fugiat ab natus modi eveniet pariatur.
-              </p>
-            </div>
-            <div class="card-footer">
-              <button class="btn">Details</button>
-              <button class="btn btn-outline">Read More</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-header">Covid Info</div>
-            <div class="card-body">
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Tempora soluta cum culpa laudantium nemo. Fugiat dolorum sequi
-                sit possimus impedit asperiores exercitationem magni. Dolores
-                et, dolore hic totam laboriosam minus!
-              </p>
-            </div>
-            <div class="card-footer">
-              <button class="btn">Details</button>
-              <button class="btn btn-outline">Read More</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-header">Covid Info</div>
-            <div class="card-body">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia
-                necessitatibus ex cupiditate ducimus, nesciunt saepe quae
-                perferendis eos nemo magnam consequuntur at laudantium
-                temporibus obcaecati beatae debitis. Animi, excepturi
-                accusantium!
-              </p>
-            </div>
-            <div class="card-footer">
-              <button class="btn">Details</button>
-              <button class="btn btn-outline">Read More</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
+  </body>
   <script src="/script.js"></script>
 </html>
