--- a/public/main.css
+++ b/public/main.css
@@ -1,23 +1,48 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&family=Kaushan+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
+:root {
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
+
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  outline: 0;
+  appearance: 0;
+  text-decoration: none;
+  border: 0;
+  list-style: none;
   box-sizing: border-box;
 }
-
 .navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background: #bb75dc;
+  background: #1a1cc8;
   color: white;
+  height: 5rem;
 }
 
 .logo {
   font-size: 2rem;
-  margin: 1rem;
 }
 .navbar-links ul {
   display: flex;
@@ -56,87 +81,17 @@
   border-radius: 10px;
 }
 
-.home-upper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
+/* INDEX PAGE */
 
-.home-title h1 {
-  font-size: 50px;
-  font-weight: normal;
-}
-
-section h1 {
-  text-align: center;
-}
-
-.container {
+.home-wrapper {
   display: flex;
   justify-content: center;
-
   align-items: center;
+  height: 100vh;
 }
-
-.cards-section {
+.home-container {
   display: flex;
-  width: 80%;
-}
-
-.card {
-  width: 100%;
-  margin-top: 2rem;
-  margin-right: 2rem;
-  margin-left: 2rem;
-  margin-bottom: 0.5rem;
-  background: white;
-  padding: 1rem;
-  border: none;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0.25rem;
-}
-
-.card-header {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.card-body {
-  font-size: 0.9rem;
-}
-
-.card-footer {
-  margin-top: 1rem;
-}
-
-.btn {
-  --color: hsl(200, 50%, 50%);
-  background: var(--color);
-  color: white;
-  padding: 0.5em 0.75em;
-  border: none;
-  border-radius: 0.25em;
-  cursor: pointer;
-}
-
-.btn:hover,
-.btn:focus {
-  background: hsl(200, 50%, 60%);
-}
-
-.btn.btn-outline {
-  background: none;
-  border: 1px solid var(--color);
-  color: var(--color);
-}
-
-.btn.btn-outline:hover,
-.btn.btn-outline:focus {
-  background: hsl(200, 50%, 90%);
-}
-
-.btn + .btn {
-  margin-left: 0.25rem;
+  justify-content: space-between;
 }
 
 .login-container {
@@ -189,6 +144,192 @@ section h1 {
   outline: none;
 }
 
+.dashboard-wrapper {
+  width: 100vw;
+  height: 100vh;
+  font-family: poppins, sans-serif;
+  font-size: 0.88rem;
+  user-select: none;
+  overflow-x: hidden;
+  background: var(--color-background);
+  color: var(--color-dark);
+}
+
+.sidebar a {
+  color: var(--color-dark);
+}
+
+.dashboard-logo img {
+  display: block;
+  width: 100%;
+}
+
+.dashboard-wrapper h1 {
+  font-weight: 800;
+  font-size: 1.8rem;
+}
+.dashboard-wrapper h2 {
+  font-size: 1.4rem;
+}
+.dashboard-wrapper h3 {
+  font-size: 0.87rem;
+}
+.dashboard-wrapper h4 {
+  font-size: 0.8rem;
+}
+.dashboard-wrapper h5 {
+  font-size: 0.77rem;
+}
+.dashboard-wrapper p {
+  color: var(--color-dark-variant);
+}
+.dashboard-wrapper b {
+  color: var(--color-dark);
+}
+
+.primary {
+  color: var(--color-primary);
+}
+.danger {
+  color: var(--color-danger);
+}
+.success {
+  color: var(--color-success);
+}
+
+.warning {
+  color: var(--color-warning);
+}
+
+small {
+  font-size: 0.76rem;
+}
+
+.profile-photo {
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.text-muted {
+  color: var(--color-info-dark);
+}
+
+.dashboard-container {
+  display: grid;
+  width: 96%;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 14rem auto 23rem;
+}
+
+aside {
+  height: 100vh;
+}
+
+aside .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
+}
+
+aside .dashboard-logo img {
+  width: 2rem;
+  height: 2rem;
+}
+
+aside .close {
+  display: none;
+}
+
+.dashboard-logo {
+  display: flex;
+  gap: 0.4rem;
+}
+
+/* SIDEBAR DASHBOARD */
+
+aside .sidebar {
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+  position: relative;
+  background: white;
+  top: 3rem;
+}
+aside h3 {
+  font-weight: 500;
+}
+
+aside .sidebar a {
+  display: flex;
+  color: var(--color-info-dark);
+  margin-left: 2rem;
+  align-items: center;
+  gap: 1rem;
+  height: 3.7rem;
+  position: relative;
+  transition: all 300ms ease;
+}
+
+aside .sidebar a span {
+  font-size: 1.6rem;
+  transition: all 300ms ease;
+}
+
+aside .sidebar a:last-child {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+}
+
+aside .sidebar a.active {
+  background: var(--color-light);
+  color: var(--color-primary);
+  margin-left: 0;
+}
+
+aside .sidebar a.active:before {
+  content: "";
+  width: 6px;
+  height: 100%;
+  background: var(--color-primary);
+}
+
+aside .sidebar a.active span {
+  color: var(--color-primary);
+  margin-left: calc(1rem - 3px);
+}
+
+aside .sidebar a:hover {
+  color: var(--color-primary);
+}
+
+aside .sidebar a:hover span {
+  margin-left: 1rem;
+}
+
+/* MAIN SECTION DASHBOARD */
+
+main {
+  margin-top: 1.4rem;
+}
+
+main .covid-info {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+}
+
+main .covid-info > div {
+  background-color: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-top: 2rem;
+}
+
 @media (max-width: 700px) {
   .togglebutton {
     display: flex;
@@ -215,8 +356,5 @@ section h1 {
 
   .navbar-links .active {
     display: flex;
-  }
-  .cards-section {
-    flex-wrap: wrap;
   }
 }
