--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,8 +11,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="main.css" />
-    <title>CovidBlogs</title>
+    <link rel="stylesheet" href="/main.css" />
+    <title>Articles</title>
   </head>
   <body>
     <div class="d-flex" id="wrapper">
@@ -26,17 +25,17 @@
         </div>
         <div class="list-group list-group-flush my-3">
           <a
-            href="#"
-            class="list-group-item list-group-item-action bg-transparent second-text active"
+            href="/dashboard"
+            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
             >Dashboard</a
           >
           <a
             href="/dashboard/articles"
-            class="list-group-item list-group-item-action bg-transparent second-text fw-bold"
+            class="list-group-item list-group-item-action bg-transparent second-text fw-bold active"
             >Create Blog</a
           >
           <a
-            href="logout"
+            href="/logout"
             class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"
             >Logout</a
           >
@@ -80,72 +79,41 @@
           </div>
         </nav>
         <div class="container-fluid px-4">
-          <div class="row g-5 my-4">
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
-              >
-                <div>
-                  <h3 class="fs-2" id="showData"></h3>
-                  <p class="fs-5">Global Covid Cases</p>
+          <div class="container">
+            <h1 class="mb-4">Blog Articles</h1>
+            <a href="/dashboard/articles/create" class="btn btn-success"
+              >New Article</a
+            >
+
+            <% articles.forEach(article => { %>
+            <div class="card mt-4">
+              <div class="card-body">
+                <h4 class="card-title"><%= article.title %></h4>
+                <div class="card-subtitle text-muted mb-2">
+                  <%= article.createdAt %>
                 </div>
+                <div class="card-text mb-2"><%= article.desc %></div>
+                <a href="articles/<%= article.id %>" class="btn btn-primary"
+                  >Read More</a
+                >
+                <a href="articles/edit/<%= article.id %>" class="btn btn-info"
+                  >Edit</a
+                >
+                <form
+                  action="articles/<%= article.id %>?_method=DELETE"
+                  method="POST"
+                  class="d-inline"
+                >
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
               </div>
             </div>
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
-              >
-                <div>
-                  <h3 class="fs-2"><%= count %></h3>
-                  <p class="fs-5">Created Articles</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
-              >
-                <div>
-                  <h3 class="fs-2"><%= countAll %></h3>
-                  <p class="fs-5">Online Articles</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row my-5">
-            <h3 class="fs-4 mb-3">Recent Articles</h3>
-            <div class="col">
-              <table class="table bg-white rounded shadow-sm table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Author</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">View</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% articles.forEach(article => { %>
-                  <tr>
-                    <td><%=article.title %></td>
-                    <td><%=article.username %></td>
-                    <td><%=article.desc %></td>
-                    <td><%=article.createdAt.toLocaleDateString() %></td>
-                    <td>
-                      <a href="dashboard/<%= article.id %>">show</a>
-                    </td>
-                  </tr>
-                  <% }) %>
-                </tbody>
-              </table>
-            </div>
+            <% }) %>
           </div>
         </div>
       </div>
     </div>
-    <!-- /#page-content-wrapper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
