--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,11 +12,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/main.css" />
     <title>CovidBlogs</title>
   </head>
   <body>
-    <div class="d-flex" id="wrapper">
+    <div class="d-flex" id="dashboard-wrapper">
       <!-- Sidebar -->
       <div class="bg-white" id="sidebar-wrapper">
         <div
@@ -36,7 +36,7 @@
             >Create Blog</a
           >
           <a
-            href="logout"
+            href="#"
             class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"
             >Logout</a
           >
@@ -44,7 +44,7 @@
       </div>
       <!-- /#sidebar-wrapper -->
       <!-- Page Content -->
-      <div class="primary-bg" id="page-content-wrapper">
+      <div id="page-content-wrapper">
         <nav
           class="navbar navbar-expand-lg navbar-light bg-transparent py-4 px-4"
         >
@@ -53,7 +53,7 @@
               class="fas fa-align-left primary-text fs-4 me-3"
               id="menu-toggle"
             ></i>
-            <h2 class="fs-2 m-0 primary-text">Dashboard</h2>
+            <h2 class="fs-2 m-0">Dashboard</h2>
           </div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -80,72 +80,51 @@
           </div>
         </nav>
         <div class="container-fluid px-4">
-          <div class="row g-5 my-4">
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+          <form
+            action="/dashboard/edit/<%= article.id %>?_method=PUT"
+            method="POST"
+          >
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input
+                required
+                value="<%= article.title %> "
+                type="text"
+                name="title"
+                id="title"
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <textarea
+                required
+                name="description"
+                id="description"
+                class="form-control"
               >
-                <div>
-                  <h3 class="fs-2" id="showData"></h3>
-                  <p class="fs-5">Global Covid Cases</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+<%= article.desc %></textarea
               >
-                <div>
-                  <h3 class="fs-2"><%= count %></h3>
-                  <p class="fs-5">Created Articles</p>
-                </div>
-              </div>
             </div>
-            <div class="col-md-4">
-              <div
-                class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded"
+
+            <div class="form-group">
+              <label for="markdown">Markdown</label>
+              <textarea
+                required
+                name="markdown"
+                id="markdown"
+                class="form-control"
               >
-                <div>
-                  <h3 class="fs-2"><%= countAll %></h3>
-                  <p class="fs-5">Online Articles</p>
-                </div>
-              </div>
+<%= article.markdown %></textarea
+              >
             </div>
-          </div>
-          <div class="row my-5">
-            <h3 class="fs-4 mb-3">Recent Articles</h3>
-            <div class="col">
-              <table class="table bg-white rounded shadow-sm table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Author</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">View</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% articles.forEach(article => { %>
-                  <tr>
-                    <td><%=article.title %></td>
-                    <td><%=article.username %></td>
-                    <td><%=article.desc %></td>
-                    <td><%=article.createdAt.toLocaleDateString() %></td>
-                    <td>
-                      <a href="dashboard/<%= article.id %>">show</a>
-                    </td>
-                  </tr>
-                  <% }) %>
-                </tbody>
-              </table>
-            </div>
-          </div>
+            <button type="submit" class="btn btn-primary">save</button>
+            <a class="btn btn-secondary" href="/dashboard">back</a>
+          </form>
         </div>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
