--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,28 +4,98 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <link rel="stylesheet" href="/main.css" />
-    <title>Covid News Generator</title>
+    <title>CovidBlogs</title>
   </head>
   <body>
-    <div class="home-wrapper">
-      <div class="home-container">
-        <div class="home-text">
-          <h1>
-            Be apart of the <br />
-            community by sharing <br />
-            your experiences
-          </h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing <br />
-            elit. Excepturi accusamus
-          </p>
-          <a href="register">Sign Up Free</a>
-        </div>
-        <div class="image">
-          <img src="images/home_image.png" alt="" />
-        </div>
-      </div>
+   
+      <!-- .navbar -->
+      <section id="hero" class="d-flex align-items-center">
+        <di
+          class="container position-relative"
+          data-aos="fade-up"
+          data-aos-delay="100"
+        >
+          <div class="row justify-content-center">
+            <div class="col-xl-7 col-lg-9 text-center">
+              <h1>Covid Blogs</h1>
+              <h2>Register now to be apart of the community!</h2>
+            </div>
+          </div>
+          <div class="text-center">
+            <a href="register" class="btn-get-started scrollto">Register</a>
+            <a href="login" class="btn-get-started scrollto">Sign in</a>
+          </div>
+
+          <div class="row icon-boxes">
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+              data-aos="zoom-in"
+              data-aos-delay="200"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="ri-stack-line"></i></div>
+                <h4 class="title"><a href="">Explore Articles</a></h4>
+                <p class="description">
+                  Check out other registered users published articles on your dashboard!
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+              data-aos="zoom-in"
+              data-aos-delay="300"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="ri-palette-line"></i></div>
+                <h4 class="title"><a href="">Create Blogs</a></h4>
+                <p class="description">
+                  Create your own covid-19 themed article and publish it so other users can see!
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="ri-command-line"></i></div>
+                <h4 class="title"><a href="">Comment</a></h4>
+                <p class="description">
+                  share your thoughts of articles in the form of comments!
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <div class="icon-box">
+                <div class="icon"><i class="ri-fingerprint-line"></i></div>
+                <h4 class="title"><a href="">Share Experience</a></h4>
+                <p class="description">
+                  Everyone is in this together so don't be afraid to share your experience!
+                </p>
+              </div>
+            </div>
+          </div>
+  
+      </section>
+      <!-- End Hero -->
     </div>
   </body>
   <script src="/script.js"></script>
