--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,6 @@
   </head>
   <body>
    
-      <!-- .navbar -->
       <section id="hero" class="d-flex align-items-center">
         <di
           class="container position-relative"
@@ -74,7 +73,7 @@
                 <div class="icon"><i class="ri-command-line"></i></div>
                 <h4 class="title"><a href="">Comment</a></h4>
                 <p class="description">
-                  share your thoughts of articles in the form of comments!
+                  Share your thoughts of articles in the form of comments!
                 </p>
               </div>
             </div>
@@ -95,7 +94,6 @@
           </div>
   
       </section>
-      <!-- End Hero -->
     </div>
   </body>
   <script src="/script.js"></script>
